Attempt to fix CORS error

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script src='beer.js'></script>
+    <base href="http://api.brewerydb.com/v2">
 
 </head>
 <body>
