--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p>
     Enter the name of a beer:
 </p>
-<form>
+<form method="post">
     <fieldset>
         <label for="br">Beer: </label>
         <input type = "text" name="br" id="br">
