--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <script type = "text/javascript"  src = "jquery-1.12.3.min.js"></script>
     <script src='beer.js'></script>
-    <base href="http://api.brewerydb.com/v2">
+    
 
 </head>
 <body>
