--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <ul>
     <li><span>Beer Searched: </span><span id="sb"></span></li>
     <li><span>Beer ID: </span><span id="id"></span></li>
+    <li><span>Brewery: </span><span id="brew"></span></li>
 
 </ul>
 <p>Beer with similar names:</p>
