--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 </form>
 <ul>
     <li><span>Beer Searched: </span><span id="sb"></span></li>
+    <li><img id=beerImg><img></li>
     <li><span>Beer ID: </span><span id="id"></span></li>
     <li><span>Brewery: </span><span id="brew"></span></li>
+    <li><span>Location: </span><span id="loc"></span></li>
+    <li><img id=brewImg><img></li>
 
 </ul>
 <p>Beer with similar names:</p>
