--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@ BreweryDB API How-To
 </p>
 <div>
 	<ul id="nav">
-		<li><a href="file:///C:/Users/Joe/Desktop/Temp%20Loc/fun/website/index.html">Home</a></li>
-		<li><a href="file:///C:/Users/Joe/Desktop/Temp%20Loc/fun/website/SetUp.html">Set Up</a></li>
-		<li><a href="file:///C:/Users/Joe/Desktop/Temp%20Loc/fun/website/API.html">API Explanation</a></li>
-		<li><a href="file:///C:/Users/Joe/Desktop/Temp%20Loc/fun/website/key.html">Getting Your API key</a></li>
-		<li><a href="file:///C:/Users/Joe/Desktop/Temp%20Loc/fun/website/requests.html">Making Requests</a></li>
-		<li><a href="file:///C:/Users/Joe/Desktop/Temp%20Loc/fun/website/CORS.html">CORS Workaround</a></li>
-		<li><a href="file:///C:/Users/Joe/Desktop/Temp%20Loc/fun/website/reqInfo.html">Using Returned Info</a></li>
-		<li><a href="file:///C:/Users/Joe/Desktop/Temp%20Loc/fun/website/final.html">Final Test</a></li>
+		<li><a href="http://jfuerst92.github.io/How-To-Guide/index.html">Home</a></li>
+		<li><a href="http://jfuerst92.github.io/How-To-Guide/SetUp.html">Set Up</a></li>
+		<li><a href="http://jfuerst92.github.io/How-To-Guide/API.html">API Explanation</a></li>
+		<li><a href="http://jfuerst92.github.io/How-To-Guide/key.html">Getting Your API key</a></li>
+		<li><a href="http://jfuerst92.github.io/How-To-Guide/requests.html">Making Requests</a></li>
+		<li><a href="http://jfuerst92.github.io/How-To-Guide/CORS.html">CORS Workaround</a></li>
+		<li><a href="http://jfuerst92.github.io/How-To-Guide/reqInfo.html">Using Returned Info</a></li>
+		<li><a href="http://jfuerst92.github.io/How-To-Guide/final.html">Final Test</a></li>
 	</ul>
 </div>
 	<div class="head">
